# chatbotDemo

./: README.md  ReadME.txt
flutter/: pubspec.yaml
flutter/lib/: MyChatBot.dart  MyHttp.dart  MyLogin.dart  MyRegister.dart  MyReservation.dart  MyReservationSummary.dart  MyResetPassword.dart  MyRouter.dart  main.dart
flutter/lib/model/: ChatModel.dart  UserModel.dart
python/: MyChatbot.py  app.py  pyproject.toml  requirements.txt  test.py
python/config/: config.ini
python/utility/: MyDB.py  MyPymongo.py
